--- a/ngaychunhat.html
+++ b/ngaychunhat.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>trang cua toi</title>
 </head>
-<body>
+<body>link dẫn dến quê hương tôi...
+<h1>điểm nhấn</h1><img src="duongvao" alt="duong" whidth="300" height="400">
+<img src="anhcau" alt="cầu hàm rồng" width="500" height=400">
+<img src="rauma" alt="rauma" whidth="270" height="400">
+<img src="rauma2" alt="a" whidth="270" height="500">
+<img src="nem chua" alt="n" whidth="400" height="400">
+<img src="gai" alt="g">
+<br>
+<h2>yêu quê hương thân thương :))</h2>
+<br>
+<br>
+<pre>Bước tới Đèo Ngang, bóng xế tà,
+Cỏ cây chen đá, lá chen hoa.
+Lom khom dưới núi, tiều vài chú,
+Lác đác bên sông, chợ mấy nhà.
+Nhớ nước, đau lòng, con quốc quốc,
+Thương nhà mỏi miệng, cái gia gia.
+Dừng chân đứng lại, trời, non, nước,
+Một mảnh tình riêng, ta với ta</pre>
+<p>hãy đến với đất nước THANH HOÁ , thân thương</p>
+
+
+    <a href="course">linkdangtao</a>
+<img src="" alt="">
+
 
 </body>
 </html>
